# Profile

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.py  build.zig  build.zig.zon
.github/workflows/: cmake-multi-platform.yml
cleandb/: README.md
compiledb/: main.zig
include/: Parser.hpp  directory_validator.hpp
src/: Parser.cpp  directory_validator.cpp  main.cpp
src/include/: Parser.hpp  directory_validator.hpp
